# periscope

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.py  ingestion_stats.json  pyproject.toml
chroma_db/: chroma.sqlite3
docs/: MODULES.md  component_diagram.mmd
monitoring/data/: ingestion_stats.json
src/context_engineering_rag/: __init__.py  __main__.py  api.py  config.py  embedder.py  foo.py  main_api.py  main_scraper.py  models.py  pipeline.py  vector_store.py
src/context_engineering_rag/app/: api.py  pipeline.py
src/context_engineering_rag/generation/: __init__.py  generator.py
src/context_engineering_rag/ingestion/: __init__.py  chunker.py  document_reader.py  embedder.py  table_extractor.py
src/context_engineering_rag/monitoring/: __init__.py  guardrails.py  monitoring.py
src/context_engineering_rag/retriever/: __init__.py  embedder.py  retriever.py  vector_store.py
src/context_engineering_rag/scraper/: __init__.py  arxiv_scraper.py
src/periscope/: __init__.py  config.py  data_models.py  embedder.py  main_api.py  main_scraper.py  models.py  pipeline.py  run_monitoring.py  vector_store.py
src/periscope/app/: api.py  pipeline.py
src/periscope/generation/: __init__.py  generator.py
src/periscope/ingestion/: __init__.py  chunker.py  document_reader.py  ingestion_pipeline.py  performance_extractor.py  preprocessor.py
src/periscope/monitoring/: __init__.py  guardrails.py  monitoring.py
src/periscope/retriever/: __init__.py  embedder.py  retriever.py  vector_store.py
src/periscope/scraper/: __init__.py  arxiv_scraper.py
src/ui/: index.html
tests/: test_config.py  test_foo.py  test_init.py  test_main_api.py  test_models.py
tests/app/: __init__.py  test_api.py  test_pipeline.py
tests/generation/: __init__.py  test_generator.py
tests/ingestion/: __init__.py  test_chunker.py  test_document_reader.py  test_ingestion_pipeline.py  test_performance_extractor.py  test_preprocessor.py  test_table_extractor.py
tests/monitoring/: __init__.py  test_guardrails.py  test_monitoring.py
tests/retriever/: __init__.py  test_embedder.py  test_retriever.py  test_vector_store.py
tests/scraper/: __init__.py  test_arxiv_scraper.py  test_main_scraper.py
